--- a/gestao/templates/admin_custom/dashboard.html
+++ b/gestao/templates/admin_custom/dashboard.html
@@ -1,7 +1,7 @@
 {% extends "admin_custom/base_admin.html" %}
 {% block title %}Dashboard{% endblock %}
 {% block header_title %}Dashboard Administrativo{% endblock %}
-{% block menu_dashboard %}active{% endblock %}
+{% block menu_dashboard %}bg-zinc-700 text-white{% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-md-3 mb-3">
