--- a/gestao/templates/admin_custom/hoteis_form.html
+++ b/gestao/templates/admin_custom/hoteis_form.html
@@ -1,7 +1,7 @@
 {% extends "admin_custom/base_admin.html" %}
 {% block title %}Nova Emissão de Hotel{% endblock %}
 {% block header_title %}Nova Emissão de Hotel{% endblock %}
-{% block menu_hoteis %}active{% endblock %}
+{% block menu_hoteis %}bg-zinc-700 text-white{% endblock %}
 
 {% block content %}
 <form method="post">
