--- a/gestao/templates/admin_custom/contas.html
+++ b/gestao/templates/admin_custom/contas.html
@@ -1,7 +1,7 @@
 {% extends "admin_custom/base_admin.html" %}
 {% block title %}Contas de Fidelidade{% endblock %}
 {% block header_title %}Contas de Fidelidade{% endblock %}
-{% block menu_contas %}active{% endblock %}
+{% block menu_contas %}bg-zinc-700 text-white{% endblock %}
 {% block content %}
     <div style="margin-bottom:1.2rem; display: flex; justify-content: space-between; align-items: center;">
         <a href="{% url 'admin_nova_conta' %}" style="background:#b67cff;color:#232345;padding:8px 16px;border-radius:8px;font-weight:bold;text-decoration:none;">
